# pyReadPubChemPkg

./: README.md  pyproject.toml
src/example_package_kevin.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/pubchem_chemical_reader/: logger.py  pubchem_reader.py  read_from_pubchem.py  scratch.py
src/pubchem_chemical_reader.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/pubchem_molecules_reader/: example.py  logger.py  read_from_pubchem.py  settings.py
src/pubchem_molecules_reader.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
