[project]
name = "pubchem_chemical_reader"
version = "0.0.4"
authors = [
  { name="Kevin Davies", email="kdaviesnz@gmail.com" },
]
description = "Package to fetch chemical information from PubChem."
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/kevindaviesnz/pyReadPubChemPkg"
